--- a/bi.qmd
+++ b/bi.qmd
@@ -354,7 +354,7 @@ if(nrow(DataKlubMangel_T) == 0) {
 		    caption = paste0(
 					IkonPerson_V, " Manglende klubber<br>",
 					"<i style=font-size:80%>Sorteret efter år, region og klub</i>")) %>%
-		kable_styling(position = "l", full_width = F) %>%
+		kable_styling(position = "l", full_width = F, htmltable_class = ".table-condensed") %>%
 		row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 		row_spec(which(grepl("Afbud", DataKlubMangel_T$OrdreStatusSimpelKat_RD)),
 						 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
@@ -395,7 +395,7 @@ if(nrow(DataDeltMangel_T) == 0) {
 			caption = paste0(
 				IkonPerson_V, " Manglende deltagere<br>",
 				"<i style=font-size:80%>Sorteret efter klubantal og år</i>")) %>%
-	kable_styling(position = "l", full_width = F) %>%
+	kable_styling(position = "l", full_width = F, htmltable_class = ".table-condensed") %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltMangel_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
