--- a/indbydelse-tilmelding-2023.qmd
+++ b/indbydelse-tilmelding-2023.qmd
@@ -53,7 +53,7 @@ DataBilletKatAkt_T %>%
       caption = paste0(
         IkonBillet_V, " Billettyper<br>",
         "<i style=font-size:80%>", length(DataBilletKatAkt_T$Billettype), " valgmuligheder ved tilmelding.</i>")) %>%
-	kable_styling(position = "l", full_width = F, htmltable_class = ".table-condensed") %>%
+	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
 	footnote(paste0(
     "Først til mølle-princip. Tilmeldingsfrist ", DataEventAarAkt_T$EventAarFristDato_DW_DMAA_DW, ".<br>",
     "Ved tilmelding modtages bekræftelsesmail.<br>",
@@ -117,7 +117,7 @@ data.frame(
       caption = paste0(
         IkonTimeglas_V, " Tidsplan<br>",
         "<i style=font-size:75%>Bemærk: Tidsplan kan ændres en smule alt efter deltagerantal.</i>")) %>%
-	kable_styling(position = "l", full_width = F, htmltable_class = ".table-condensed") %>%
+	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
 	column_spec(1, width_min = "1em") %>%
 	column_spec(2, width_min = "7em") %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
@@ -179,7 +179,7 @@ data.frame(
       caption = paste0(
         IkonPerson_V, " Kontaktperson<br>",
         "<i style=font-size:80%>Evt. spørgsmål til kontaktperson</i>")) %>%
-  kable_styling(position = "l", full_width = F, htmltable_class = ".table-condensed") %>%
+  kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
   column_spec(1, width_min = "5.5em") %>%
   column_spec(1:2, extra_css = "border:hidden")
 
@@ -196,7 +196,7 @@ data.frame(
       caption = paste0(
         IkonPerson_V, " Stævneleder<br>",
         "<i style=font-size:80%>Ansvarlig på stævnedagen</i>")) %>%
-  kable_styling(position = "l", full_width = F, htmltable_class = ".table-condensed") %>%
+  kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
   column_spec(1, width_min = "5.5em") %>%
   column_spec(1:2, extra_css = "border:hidden")
 
@@ -208,7 +208,7 @@ data.frame(
       caption = paste0(
         IkonLokation_V, " Lokation<br>",
         "<i style=font-size:80%>Geografisk placering</i>")) %>%
-  kable_styling(position = "l", full_width = F, htmltable_class = ".table-condensed") %>%
+  kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
   column_spec(1, width_min = "5.5em") %>%
   column_spec(1:2, extra_css = "border:hidden")
 ```
@@ -313,7 +313,7 @@ if(nrow(DataPraemiePengeAkt_T) == 0) {
   DataPraemiePengeAkt_T %>%
     kbl(col.names = NA, align = "lrr", escape = F,
         caption = paste(IkonPenge_V, "Præmiepenge")) %>%
-    kable_styling(position = "l", full_width = F, htmltable_class = ".table-condensed") %>%
+    kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
     row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
     row_spec(which(DataPraemiePengeAkt_T$PraemieRank_DW == "1"),
              bold = T, background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000") %>%
