--- a/index.qmd
+++ b/index.qmd
@@ -81,7 +81,7 @@ IkonBogmærke_V, "<b>Bogmærk</b> [denne side](index.qmd) for nem og hurtig adga
   <div class="callout callout-style-default callout-note callout-titled" style="font-style:italic">
     <div class="callout-header d-flex align-content-center">
       <div class="callout-icon-container"><iconify-icon icon=mdi:arrow-up-left></iconify-icon></div>
-      <div class="callout-title-container flex-fill">Menu tilgås oppe til venstre fra mobil/tablet</div>
+      <div class="callout-title-container flex-fill">Menu tilgås i toppen til venstre fra mobil/tablet</div>
     </div>
     <div class="callout-body-container callout-body" style="padding-bottom:2.6px"></div>
   </div>
