--- a/praemier-deltagere.qmd
+++ b/praemier-deltagere.qmd
@@ -118,7 +118,7 @@ if(nrow(DataPraemieYngstAeldstAkt_T) == 0) {
     column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
     footnote(paste(
       "Gaverne har til formål at hylde mangfoldigheden.<br>",
-      "Aldersforskel", DataBilletAkt_T$StatAlderForskelAntal_DW, "år."),
+      DataBilletAkt_T$StatAlderForskelAntal_DW),
       general_title = "", escape = F) %>%
     remove_column(5)
 }
@@ -127,7 +127,7 @@ if(nrow(DataPraemieYngstAeldstAkt_T) == 0) {
 ## `r paste(IkonPerson_V, "Deltagere")`
 
 ::: {.callout-note icon="false"}
-## `r paste0(IkonBillet_V, "&nbsp;Tilmeldinger", "^[<i><b>Tilmeldinger</b>: Tilmeldinger opgøres efter antal tilmeldinger til eventet fordelt på billettype.</i>]")`
+## `r paste0(IkonBillet_V, "&nbsp;Tilmeldinger", "^[<b>Tilmeldinger</b>: Tilmeldinger opgøres efter antal tilmeldinger til eventet fordelt på billettype.]")`
 
 ```{r}
 #| output: asis
@@ -240,15 +240,15 @@ DataAkt_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD)) %>%
 #| output: asis
 cat(paste0(
 "<i style=font-size:70%>",
-"<b>", DataBilletAkt_T$StatDeltKlubKatAntal_DW, "</b>",
-"&nbsp;^[<i><b>Deltagere klub</b>: Deltagere klub opgøres efter antal tilmeldte deltagere til eventet fordelt på <q>klub</q>, <q>ingen klub</q> og <q>udlandet</q>. Procentsatserne viser fordelingen heraf.</i>]",
+DataBilletAkt_T$StatDeltKlubKatAntal_DW,
+"&nbsp;^[<b>Deltagere klub</b>: Deltagere klub opgøres efter antal tilmeldte deltagere til eventet fordelt på <q>klub</q>, <q>ingen klub</q> og <q>udlandet</q>. Procentsatserne viser fordelingen heraf.]",
 "</i>",
 
 " <br>",
 
 "<i style=font-size:70%>",
-"<b>", DataBilletAkt_T$StatKlubAntal_DW, "</b>",
-"&nbsp;^[<i><b>Forskellige klubber</b>: Forskellige klubber opgøres efter antal tilmeldte bordtennisklubber eksklusiv <q>ingen klub</q> og <q>udlandet</q> til eventet.</i>]",
+DataBilletAkt_T$StatKlubAntal_DW,
+"&nbsp;^[<b>Forskellige klubber</b>: Forskellige klubber opgøres efter antal tilmeldte bordtennisklubber eksklusiv <q>ingen klub</q> og <q>udlandet</q> til eventet.]",
 "</i>"))
 ```
 
@@ -305,14 +305,14 @@ DataAkt_T %>%
 cat(paste0(
 "<i style=font-size:70%>",
 "<b>Deltagere landsdel</b>:&nbsp;", DataBilletAkt_T$StatDeltLandsdelAntal_DW,
-" ^[<i><b>Deltagere landsdel</b>: Deltagere landsdel opgøres efter antal tilmeldte deltagere til eventet fordelt på Jylland, Fyn, Sjælland og Bornholm eksklusiv <q>ingen klub</q> og <q>udlandet</q>. Procentsatserne viser fordelingen heraf. Landsdel tager udgangspunkt i bordtennisklubbens belligenhed.</i>]",
+" ^[<b>Deltagere landsdel</b>: Deltagere landsdel opgøres efter antal tilmeldte deltagere til eventet fordelt på Jylland, Fyn, Sjælland og Bornholm eksklusiv <q>ingen klub</q> og <q>udlandet</q>. Procentsatserne viser fordelingen heraf. Landsdel tager udgangspunkt i bordtennisklubbens belligenhed.]",
 "</i>",
 
 " <br>",
 
 "<i style=font-size:70%>",
 "<b>Deltagere region</b>:&nbsp;", DataBilletAkt_T$StatDeltRegionAntal_DW,
-" ^[<i><b>Deltagere region</b>: Deltagere region opgøres efter antal tilmeldte deltagere til eventet fordelt på Nordjylland, Midtjylland, Syddanmark, Sjælland og Hovedstaden eksklusiv <q>ingen klub</q> og <q>udlandet</q>. Procentsatserne viser fordelingen heraf. Region tager udgangspunkt i bordtennisklubbens belligenhed.</i>]",
+" ^[<b>Deltagere region</b>: Deltagere region opgøres efter antal tilmeldte deltagere til eventet fordelt på Nordjylland, Midtjylland, Syddanmark, Sjælland og Hovedstaden eksklusiv <q>ingen klub</q> og <q>udlandet</q>. Procentsatserne viser fordelingen heraf. Region tager udgangspunkt i bordtennisklubbens belligenhed.]",
 "</i>"))
 ```
 
@@ -357,15 +357,15 @@ DataAkt_T %>%
 #| output: asis
 cat(paste0(
 "<i style=font-size:70%>",
-"<b>", DataBilletAkt_T$StatDeltAlderKatAntal_DW, "</b>",
-"&nbsp;^[<i><b>Deltagere aldersgruppe</b>: Deltagere aldersgruppe opgøres efter antal tilmeldte deltagere til eventet fordelt på ungdom (≤ 17 år), senior (≤ 39 år) og veteran (≥ 40 år). Procentsatserne viser fordelingen heraf. Alder tager udgangspunkt i fødselsdato og eventdatoen ", DataBilletAkt_T$BilletStartDato_DW_DMAA_DW, " (ikke dags dato).</i>]",
+DataBilletAkt_T$StatDeltAlderKatAntal_DW,
+"&nbsp;^[<b>Deltagere aldersgruppe</b>: Deltagere aldersgruppe opgøres efter antal tilmeldte deltagere til eventet fordelt på ungdom (≤ 17 år), senior (≤ 39 år) og veteran (≥ 40 år). Procentsatserne viser fordelingen heraf. Alder tager udgangspunkt i fødselsdato og eventdatoen ", DataBilletAkt_T$BilletStartDato_DW_DMAA_DW, " (ikke dags dato).]",
 "</i>",
 
 " <br>",
 
 "<i style=font-size:70%>",
-"<b>", DataBilletAkt_T$StatDeltAlderAntal_DW, "</b>",
-"&nbsp;^[<i><b>Alder</b>: Alder opgøres efter hhv. yngst, gennemsnitlig alder og ældst i forhold til tilmeldte deltagere til eventet. Alder tager udgangspunkt i fødselsdato og eventdatoen ", DataBilletAkt_T$BilletStartDato_DW_DMAA_DW, " (ikke dags dato).</i>]",
+DataBilletAkt_T$StatDeltAlderAntal_DW,
+"&nbsp;^[<b>Alder</b>: Alder opgøres efter hhv. yngst, gennemsnitlig alder og ældst i forhold til tilmeldte deltagere til eventet. Alder tager udgangspunkt i fødselsdato og eventdatoen ", DataBilletAkt_T$BilletStartDato_DW_DMAA_DW, " (ikke dags dato).]",
 "</i>"))
 ```
 
@@ -411,8 +411,8 @@ DataAkt_T %>%
 #| output: asis
 cat(paste0(
 "<i style=font-size:70%>",
-"<b>", DataBilletAkt_T$StatDeltKoenAntal_DW, "</b>",
-"&nbsp;^[<i><b>Deltagere køn</b>: Deltagere køn opgøres efter antal tilmeldte deltagere til eventet fordelt på herre og dame. Procentsatserne viser fordelingen heraf.</i>]",
+DataBilletAkt_T$StatDeltKoenAntal_DW,
+"&nbsp;^[<b>Deltagere køn</b>: Deltagere køn opgøres efter antal tilmeldte deltagere til eventet fordelt på herre og dame. Procentsatserne viser fordelingen heraf.]",
 "</i>"))
 ```
 
@@ -457,8 +457,8 @@ DataAkt_T %>%
 #| output: asis
 cat(paste0(
 "<i style=font-size:70%>",
-"<b>", DataBilletAkt_T$StatDeltGenKatAntal_DW, "</b>",
-"&nbsp;^[<i><b>Deltagere gentilmelding</b>: Deltagere gentilmelding opgøres efter antal tilmeldte deltagere til eventet fordelt på <q>gentilmelding</q> og <q>debutant</q>. Procentsatserne viser fordelingen heraf. Gentilmelding defineres som en, der tidligere har valgt samme billetype, og debutant defineres som en, der har valgt en billettype for første gang. Ved både gentilmelding og debutant tælles dette kun som gentilmelding. Opgørelsen gælder fra og med ", distinct(filter(DataAkt_T, EventAarFra2021_DW == DataEventAarAkt_T$EventAarFra2021_DW), min(EventAarStartDato_DW_Aar_DW)), ".</i>]",
+DataBilletAkt_T$StatDeltGenKatAntal_DW,
+"&nbsp;^[<b>Deltagere gentilmelding</b>: Deltagere gentilmelding opgøres efter antal tilmeldte deltagere til eventet fordelt på <q>gentilmelding</q> og <q>debutant</q>. Procentsatserne viser fordelingen heraf. Gentilmelding defineres som en, der tidligere har valgt samme billetype, og debutant defineres som en, der har valgt en billettype for første gang. Ved både gentilmelding og debutant tælles dette kun som gentilmelding. Opgørelsen gælder fra og med ", distinct(filter(DataAkt_T, EventAarFra2021_DW == DataEventAarAkt_T$EventAarFra2021_DW), min(EventAarStartDato_DW_Aar_DW)), ".]",
 "</i>"))
 ```
 
@@ -503,15 +503,15 @@ DataAkt_T %>%
 #| output: asis
 cat(paste0(
 "<i style=font-size:70%>",
-"<b>", DataBilletAkt_T$StatDeltAntal_DW, "</b>",
-"&nbsp;^[<i><b>Deltagere total</b>: Deltagere total opgøres efter antal unikke tilmeldte deltagere og <q>totalafbud</q> til eventet. Procentsatserne viser fordelingen heraf. Ved <q>totalafbud</q> forstås deltagere, der har meldt afbud til hele eventet.</i>]",
+DataBilletAkt_T$StatDeltAntal_DW,
+"&nbsp;^[<b>Deltagere total</b>: Deltagere total opgøres efter antal unikke tilmeldte deltagere og <q>totalafbud</q> til eventet. Procentsatserne viser fordelingen heraf. Ved <q>totalafbud</q> forstås deltagere, der har meldt afbud til hele eventet.]",
 "</i>",
 
 " <br>",
 
 "<i style=font-size:70%>",
-"<b>", DataBilletAkt_T$StatBilletGnsAntal_DW, "</b>",
-"&nbsp;^[<i><b>Billetter pr. deltager</b>: Billetter pr. deltager er et gennemsnit, som opgøres efter antal tilmeldinger (billetantal) divideret med tilmeldte deltagere til eventet.</i>]",
+DataBilletAkt_T$StatBilletGnsAntal_DW,
+"&nbsp;^[<b>Billetter pr. deltager</b>: Billetter pr. deltager er et gennemsnit, som opgøres efter antal tilmeldinger (billetantal) divideret med tilmeldte deltagere til eventet.]",
 "</i>"))
 ```
 
