--- a/praemier-deltagere.qmd
+++ b/praemier-deltagere.qmd
@@ -252,14 +252,14 @@ cat(paste0(
 
 ```{r}
 DataDeltKlubAkt_T %>%
-	kbl(col.names = NA, align = "l", escape = F,
+	kbl(col.names = NA, align = "ccll", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter klubantal</i>") %>%
 	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltKlubAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:3, extra_css = "border-top:0.7px solid #808080") %>%
-	remove_column(4:5) %>%
+	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
 :::
@@ -314,14 +314,14 @@ cat(paste0(
 
 ```{r}
 DataDeltByAkt_T %>%
-	kbl(col.names = NA, align = "l", escape = F,
+	kbl(col.names = NA, align = "ccll", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter region og postnr.</i>") %>%
 	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltByAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:3, extra_css = "border-top:0.7px solid #808080") %>%
-	remove_column(4:5) %>%
+	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
 :::
@@ -365,14 +365,14 @@ cat(paste0(
 
 ```{r}
 DataDeltAlderKatAkt_T %>%
-	kbl(col.names = NA, align = "l", escape = F,
+	kbl(col.names = NA, align = "ccll", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter fødselsdato</i>") %>%
 	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltAlderKatAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:3, extra_css = "border-top:0.7px solid #808080") %>%
-	remove_column(4:5) %>%
+	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
 :::
@@ -412,14 +412,14 @@ cat(paste0(
 
 ```{r}
 DataDeltKoenAkt_T %>%
-	kbl(col.names = NA, align = "l", escape = F,
+	kbl(col.names = NA, align = "ccll", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter køn</i>") %>%
 	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltKoenAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:3, extra_css = "border-top:0.7px solid #808080") %>%
-	remove_column(4:5) %>%
+	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
 :::
@@ -458,14 +458,14 @@ cat(paste0(
 
 ```{r}
 DataDeltGenTilAkt_T %>%
-	kbl(col.names = NA, align = "l", escape = F,
+	kbl(col.names = NA, align = "ccll", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter antal gentilmeldinger</i>") %>%
 	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltGenTilAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:3, extra_css = "border-top:0.7px solid #808080") %>%
-	remove_column(4:5) %>%
+	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
 :::
@@ -509,14 +509,14 @@ cat(paste0(
 
 ```{r}
 DataDeltOrdreKatAkt_T %>%
-	kbl(col.names = NA, align = "l", escape = F,
+	kbl(col.names = NA, align = "ccll", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter ældste <q>første ordredato</q></i>") %>%
 	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltOrdreKatAkt_T$OrdreStatusSimpelKat_RD)),
 					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
-	column_spec(1:3, extra_css = "border-top:0.7px solid #808080") %>%
-	remove_column(4:5) %>%
+	column_spec(1:4, extra_css = "border-top:0.7px solid #808080") %>%
+	remove_column(5:6) %>%
 	scroll_box(height = "400px")
 ```
 :::
